# meta-autoresearch

./: .gitignore  CONTRIBUTING.md  QWEN.md  README.md  ROADMAP.md  pyproject.toml
.qwen/: settings.json
docs/: artifact-taxonomy.md  batch-command-usage.md  branch-maturity.md  evaluation-framework.md  foundation-questions.md  foundation.md  glossary.md  method-guide.md  method-infrastructure.md  method.md  model-evaluation-routine.md  model-performance.md  phase-7-spec.md  phase-8-assessment.md  research-agenda.md  research-loop.md  research-tooling.md  what-we-learned.md
meta/: README.md
meta/branches/: avian-flu-zoonotic.json  breadbasket.json  hydrologic.json  wealth-concentration.json  whiplash.json
meta/components/: INDEX.md  README.md  evidence-fsb-nbfi-monitoring.yaml  evidence-gaupp-2020.yaml  evidence-heino-2023.yaml  evidence-imf-private-credit-outlook.yaml  evidence-reliefweb-market-bulletin.yaml  evidence-russo-2010-case.yaml  evidence-usda-wheat-balance.yaml  evidence-wid-2022-report.yaml  hazard-agricultural-drought.yaml  hazard-chip-supply-disruption.yaml  hazard-credit-squeeze.yaml  hazard-currency-depreciation.yaml  hazard-export-restriction-pandemic.yaml  hazard-heavy-precipitation.yaml  hazard-logistics-disruption.yaml  hazard-policy-transition.yaml  hazard-policy-volatility.yaml  hazard-regulatory-arbitrage.yaml  hazard-rice-export-restriction.yaml  hazard-trade-restriction-amplification.yaml  hazard-wildfire.yaml  infra-black-sea-export-corridor.yaml  infra-wivenhoe-dam.yaml  (+60 more)
meta_autoresearch_cli/: __init__.py  cli.py
research/: README.md
(+204 files in other folders)
